--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "sweetalert2": "^11.4.32",
     "web-vitals": "^2.1.4"
   },
-
+  "engines": {"node": "16.17.0"},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
