--- a/package.json
+++ b/package.json
@@ -7,20 +7,19 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "gsap": "^3.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "sweetalert2": "^11.4.32",
     "web-vitals": "^2.1.4"
   },
-  "engines": {"node": "16.17.0"},
+  "engines": {
+    "node": "16.17.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -46,4 +45,3 @@
     ]
   }
 }
-  
