--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage":"https://eber-cba.github.io/pokemonChallenge",
+
   "name": "pokemon",
   "version": "0.1.0",
   "private": true,
@@ -21,6 +23,8 @@
     "node": "16.17.0"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
